--- a/bootstrap/login.html
+++ b/bootstrap/login.html
@@ -38,6 +38,7 @@
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Remember me
         </label>
+          <a class="signUp" href="newacct.html">Sign up here.</a>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
 
