--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -24,11 +24,8 @@
                 <div class="container">
                   <ul class="nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Downloads</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="newContact.html">New Contact</a></li>
+                    <li><a href="newGroup.html">New Group</a></li>
                   </ul>
                 </div>
               </div>
