--- a/bootstrap/contacts.html
+++ b/bootstrap/contacts.html
@@ -1,4 +1,37 @@
+<?
+    // start a session to handle all session variables
+    session_start();
+    
+    // if there is a session started, that has a variable
+    // authenticated within it, whose value is true
+    // it will show the page's contents
+    // otherwise, it redirects back to the login
+    if (!$_SESSION[authenticated] == true)
+        header("location:/436/login/");
+?>
 
+<!DOCTYPE html>
+    <head>
+        <title>Login</title>
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />
+        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+    </head>
+    
+    <body>
+        <div data-role='page' id='login'>
+            <div data-role='header' data-position='fixed'>
+                <h1>SECURED!  Warning!</h1>
+            </div>
+            <div data-role='content'>
+                This is secured content... only visible if logged in.
+            </div>
+            <div data-role="footer" data-position="fixed">
+                <p>&copy;2014, Marshall University</p>
+            </div>
+        </div>
+    </body>
+</html>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,7 +48,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/jumbotron.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -41,6 +74,7 @@
           <a class="navbar-brand" href="newContact.html">New Contact</a>
             <a class="navbar-brand" href="newGroup.html">New Group</a>   
         </div>
+    <!--      
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
@@ -51,7 +85,7 @@
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
-        </div><!--/.navbar-collapse -->
+        </div><!--/.navbar-collapse --> 
       </div>
     </div>
 
